platform/gitops/components/secrets/vault/config/destinationrule-kms-shim-istio-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kms-shim-istio-mtls
  namespace: vault-system
spec:
  host: kms-shim.vault-seal-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
