platform/gitops/components/secrets/vault/config/destinationrule-kube-apiserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kubernetes-apiserver-no-mtls
  namespace: vault-system
spec:
  host: kubernetes.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
